--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <hr><br><br>
 
         <p>
-            8/20/23 - This is my first journal entry! 
+            8/25/23 - This is my first journal entry! For the first whole week of school, I learned about lab safety, ettiquete, and the engineering process. For engineering class, I can't eat, I need to make sure to wear proper PPE, and I need to make sure I'm not using tools dangerously; I need to use them the way they were supposed to be used. For ettiquete, I need to make sure I'm cooperating and I don't endanger anyone while I'm working, and I need to make sure I don't interfere with other people's work. During Thursday's challenge day, I had to get a marble into a bucket using halved PVC pipes, and by cooperating with people. I learned that in order to be successful, everyone needs to be successful, and if even a single person doesn't cooperate, it can be detrimental to the other group members. When Mr. Poole showed slides to describe the engineering process, I learned that I need to make lots of prototypes and make sure to improve upon them in order to get to a final goal. In addition to this, I learned that a project should be fixing a problem, either by creating a brand new solution or improving an already existent solution. 
             <br>
-            <a href="https://letmegooglethat.com/?q=best+website">My Favorite Website</a>
+            <a href="https://www.10000recipe.com/recipe/6850116">My Favorite Website</a>
         </p>
 
         <p>
