--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         <p>
             8/25/23 - This is my first journal entry! For the first whole week of school, I learned about lab safety, ettiquete, and the engineering process. For engineering class, I can't eat, I need to make sure to wear proper PPE, and I need to make sure I'm not using tools dangerously; I need to use them the way they were supposed to be used. For ettiquete, I need to make sure I'm cooperating and I don't endanger anyone while I'm working, and I need to make sure I don't interfere with other people's work. During Thursday's challenge day, I had to get a marble into a bucket using halved PVC pipes, and by cooperating with people. I learned that in order to be successful, everyone needs to be successful, and if even a single person doesn't cooperate, it can be detrimental to the other group members. When Mr. Poole showed slides to describe the engineering process, I learned that I need to make lots of prototypes and make sure to improve upon them in order to get to a final goal. In addition to this, I learned that a project should be fixing a problem, either by creating a brand new solution or improving an already existent solution. Now personally, I enjoyed the slides, since they gave me a review on how to be safe, and how to be courteous in the lab. The challenge on Thursday though, it made my brain hurt. Not everyone cooperated, or applied the simple concept of trajectory to the challenge, which led to people making... frankly an eyesore of a track for the marble. We needed to be just a bit more cooperative in order to finish the challenge. The only thing holding us back was the slight lack of understanding momentum. All in all, it was a great week in engineering, and I can't wait for week 2!
             <br>
-            <a href="https://www.10000recipe.com/recipe/6850116">My Favorite Website</a>
+            <a href="https://www.10000recipe.com/recipe/6850116">My Favorite Website</a> 
+        </p> <img src="mrbl.jpg" width="180px" height="120px">
         </p>
 
         <p>
-            8/21/23 - This is my second journal entry
-        </p>
+            9/1/23 - This is my second journal entry. This week, we took a quiz on the engineering process and lab safety. Wasn't the worst, but I'd say I need to look at the process one more time. Would probably benefit me if I looked at it every day just to make sure I remember 100%. For Thursday's challenge, the class made a home appliance using Tinkercad. I ended up making a blender, which ended up looking extremely wide. I feel like if I had some extra time, I could improve upon it since I'm more familiar with Tinkercad now. I look forward to next week's challenge! I have a good feeling next week's challenge will be even more fun. Maybe it'll be another group activity. Hopefully things go smoother than the first challenge week activity! 
+            
+        </p> <img src="Blenderblunder.png" width="180px" height="120px">
+        </p> 
     </body>
 
 </html>
