--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             9/1/23 - This is my second journal entry. This week, we took a quiz on the engineering process and lab safety. Wasn't the worst, but I'd say I need to look at the process one more time. Would probably benefit me if I looked at it every day just to make sure I remember 100%. For Thursday's challenge, the class made a home appliance using Tinkercad. I ended up making a blender, which ended up looking extremely wide. I feel like if I had some extra time, I could improve upon it since I'm more familiar with Tinkercad now. I look forward to next week's challenge! I have a good feeling next week's challenge will be even more fun. Maybe it'll be another group activity. Hopefully things go smoother than the first challenge week activity! 
             
         </p> <img src="Blenderblunder.png" width="180px" height="120px">
+        <p>
+            9/8/23 - Third journal entry! This week was somewhat stressful. AP Precalculus and AP Physics were somehow mindbogglingly difficult, so I stayed up until around 2AM on Thursday night, but the other days were fine. Monday was Labor Day so no school, while on Tuesday, we had a drug awareness assembly and Wednesday we had MAP testing. Pretty boring. For engineering though, I refined my skills in Tinkercad, and learned to use just a touchpad(albeit quite painful, it still works). We used Tinkercad to make the Rube Goldberg machine's basic blueprint. It turned out well! The most challenging part of the entire project has to be the pulley. Making it out of cardboard should be fine, but orienting it so that the weight of our first platform doesn't tip over but moves just as we apply pressure is going to be hard. Luckily, my group and I won't back down and I'm sure we'll find out how to make the project work. 
+        </p> <img src="ProjectGoldBingus.png" width="180px" height="120px">
         </p> 
     </body>
 
