--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             9/8/23 - Third journal entry! This week was somewhat stressful. AP Precalculus and AP Physics were somehow mindbogglingly difficult, so I stayed up until around 2AM on Thursday night, but the other days were fine. Monday was Labor Day so no school, while on Tuesday, we had a drug awareness assembly and Wednesday we had MAP testing. Pretty boring. For engineering though, I refined my skills in Tinkercad, and learned to use just a touchpad(albeit quite painful, it still works). We used Tinkercad to make the Rube Goldberg machine's basic blueprint. It turned out well! The most challenging part of the entire project has to be the pulley. Making it out of cardboard should be fine, but orienting it so that the weight of our first platform doesn't tip over but moves just as we apply pressure is going to be hard. Luckily, my group and I won't back down and I'm sure we'll find out how to make the project work. 
         </p> <img src="ProjectGoldBingus.png" width="180px" height="120px">
         </p> 
+            9/22/23 - This is my fourth entry, and this week, we couldn't update the website. Once we did CAD modeling for our project, we had to refine the little bits and pray that the physics engine works. Once we got around that, we thought we were all set, and we hoped it would be smooth sailing. Boy were we wrong. Cardboard is surprisingly stubborn. 
+        </p>
+        </p>
+            9/22/23 - This is my fifth entry. This week, we had to make our projects using cardboard. Every bit of cardboard we cut, we had an issue. Either our bottle for our air chamber was broken or the cardboard wasn't strong enough to hold up components like pulleys. I really hope the grade for the project is good. Our project didn't work too well, since the air chamber was a bit too small, it didn't properly propel the needle into the balloon. That resulted in the balloon not popping. I don't know what specifically went wrong, but fingers crossed my grade is safe. 
+        </p>
+        </p> <video width = "900" height = "600" controls = "" loop = "">
+                <source src = "LBalloon.mp4" type="video/mp4">
+        </video>
     </body>
 
 </html>
