--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
         </p>
             9/22/23 - This is my fifth entry. This week, we had to make our projects using cardboard. Every bit of cardboard we cut, we had an issue. Either our bottle for our air chamber was broken or the cardboard wasn't strong enough to hold up components like pulleys. I really hope the grade for the project is good. Our project didn't work too well, since the air chamber was a bit too small, it didn't properly propel the needle into the balloon. That resulted in the balloon not popping. I don't know what specifically went wrong, but fingers crossed my grade is safe. 
         </p>
-        </p> <video width = "900" height = "600" controls = "" loop = "">
+        </p> <video width="900" height="600" controls="" loop="">
                 <source src = "LBalloon.mp4" type="video/mp4">
+        </video>
+        </p> <video width="900" height="600" controls="" loop="">
+                <source src="Bingus.mp4" type="video/mp4">
         </video>
     </body>
 
