--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         </p> <video width="900" height="600" controls="" loop="">
                 <source src="Bingus.mp4" type="video/mp4">
         </video>
+        </p> 
+            9/28/23 - This is my sixth entry. This week, we had to dissect computers, and it was way too easy for me, since I've tried taking apart laptops in the past. It was nice being able to see computer parts so far apart though. I did learn that some computers have heat sinks that are like car radiators, just connected to a fan via a small tunnel. I do want to figure out how to surpass Moore's law and the physical limitations of our current technology in the future. This weekend, I'll most likely stay home and try to get rid of my cold, or go golfing if I get better fast. 
+        </p> <img src="CompTear.jpg" width="180px" height="120x">
     </body>
 
 </html>
