--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </p> 
             9/28/23 - This is my sixth entry. This week, we had to dissect computers, and it was way too easy for me, since I've tried taking apart laptops in the past. It was nice being able to see computer parts so far apart though. I did learn that some computers have heat sinks that are like car radiators, just connected to a fan via a small tunnel. I do want to figure out how to surpass Moore's law and the physical limitations of our current technology in the future. This weekend, I'll most likely stay home and try to get rid of my cold, or go golfing if I get better fast. 
         </p> <img src="CompTear.jpg" width="180px" height="120x">
+        
+        </p>
+            10/6/23 - This is my seventh entry. This week, groups changed a tiny bit and I got to work with some new people. Of course, there were different ideas from between the two of us, but in the end, we compromised and ended up making a functional prosthetic hand. That ties in to the week's lesson on bioengineering. I learned that bioengineering also included statistics, since we can gather data from biological samples and that would be considered engineering. All in all, very simple week, not too busy. The pace of this week was a lot nicer than other weeks since things were spaced out nicely. Not only that, Mr. Poole brought his cat which made class a lot more interesting. Cat pics? Don't have any for the website for now... ㅠㅠ
+        </p> <img src="Hand.jpg" width ="180px" height ="120px">
     </body>
 
 </html>
