--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         </p>
             10/6/23 - This is my seventh entry. This week, groups changed a tiny bit and I got to work with some new people. Of course, there were different ideas from between the two of us, but in the end, we compromised and ended up making a functional prosthetic hand. That ties in to the week's lesson on bioengineering. I learned that bioengineering also included statistics, since we can gather data from biological samples and that would be considered engineering. All in all, very simple week, not too busy. The pace of this week was a lot nicer than other weeks since things were spaced out nicely. Not only that, Mr. Poole brought his cat which made class a lot more interesting. Cat pics? Don't have any for the website for now... ㅠㅠ
         </p> <img src="Hand.jpg" width ="180px" height ="120px">
+        </p> 
+            10/13/23 - This is my eighth entry. This week was all about aerospace engineering. I learned that flying objects are affected by weight, thrust, lift, and drag. Weight of course pulls the aircraft down, while thrust pushes it, and lift affects how well a craft stays up in the air. The drag is usually in relation to air, as drag pulls aircraft back and limits how fast it can go. I liked how we had so much experience with 3d modeling in this class, and how we don't stick to one topic for too long. It helps me learn more general knowledge about topics that could help me later in life when I get a job, since I plan to work in aerospace or mechanical engineering anyways. Here's a list of things we need for our model rocket! It's called a BOM, or a build of materials!
+        <a href="https://docs.google.com/spreadsheets/d/1lGscCIdbzAa7pHJVnhujk2GiB7v-HJt29ziQC7IV3EA/edit#gid=0">My BOM</a>
+        </p> <img src="Rocket.png" width ="180px" height ="120px">
+        
     </body>
 
 </html>
