--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         </p> <img src="Rocket.png" width ="180px" height ="120px">
         </p> 
             10/20/23 - This is my ninth entry. This week, the class made bottle rockets. Boy I'm glad we weren't graded based on how far we flew... My group had too much water in the bottle(around 1/3 of the bottle full). Even then, it was fun watching everyone try out their creations! Even better, I got wet which made being in the sun a bit more tolerable. Now on to what I learned about aerospace engineering: This week was mostly a review of what I learned from physics engine games I've played with friends for a good while. Of course, to push something, you need thrust, but drag is caused by any amount of friction, so being aerodynamic is important. Then there's lift, which helps aircraft push themselves up due to an air pressure change between the top and bottom of the wings. That lift has to overcome the weight of the aircraft, and simulataneously be aerodynamic enough to be fast and not create too much friction. Such a delicate balance... somewhat like food. You need everything to work together, and once it does, it feels like a miracle! Anyways, the launches were fun to watch, and hopefully, I get to do more fun stuff like this for the rest of the year! 
-        </p> 
+        </p> <img src="RocketThingu.png" width = "180px" height = "120px">
+        </p> <video width = "900" height = "600" controls = "" loop = "">
+                <source src = "RocketLaunch.mov" type = "video/mp4">
+        </video>
     </body>
 
 </html>
