--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </p> <video width = "900" height = "600" controls = "" loop = "">
                 <source src = "RocketLaunch.mov" type = "video/mp4">
         </video>
+        </p> 
+            10/26/23 - This is my tenth entry. This week, I learned about environmental engineering and reducing pollution. For the week's activity, my class and I made water filers using cotton, sand, and gravel. My partner, Hrak, and I made a water filter with multiple layers of cotton, gravel, and rocks. The filter might've been a bit too underpowered, since my water was still cloudy after going through the filter twice. This was even after we cleaned out the filter using clean water. Even then, the filter worked to a degree. Just not optimally. After this is my three-day weekend, so I'm excited for that. I should be able to go to the golf range on Sunday, and I might be able to go hang out with some friends on Saturday. Not sure where to go, or if we're even going out in the first place, but I'm excited to find out what happens either way!
+        </p> <img src="Filter.jpeg" width ="180px" height = "120px">
     </body>
 
 </html>
