--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         </p> 
             10/26/23 - This is my tenth entry. This week, I learned about environmental engineering and reducing pollution. For the week's activity, my class and I made water filers using cotton, sand, and gravel. My partner, Hrak, and I made a water filter with multiple layers of cotton, gravel, and rocks. The filter might've been a bit too underpowered, since my water was still cloudy after going through the filter twice. This was even after we cleaned out the filter using clean water. Even then, the filter worked to a degree. Just not optimally. After this is my three-day weekend, so I'm excited for that. I should be able to go to the golf range on Sunday, and I might be able to go hang out with some friends on Saturday. Not sure where to go, or if we're even going out in the first place, but I'm excited to find out what happens either way!
         </p> <img src="Filter.jpeg" width ="180px" height = "120px">
+        
+        </p>
+            10/31/23 - This is my tenth entry. This week so far, I learned about electrical engineering. It basically goes over anything related to electricity, be it circuitry, communications, or signal processing. It's a pretty interesting lesson, I'd say. Pretty okay, just hoping the activities are fun for this and next week. I heard that we're doing electrical engineering for two weeks instead of one since it's such a big topic. 
+        </p> 
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR4of20245boYspIrXOVfepoLu4eYTdlXdTTBMj4R_qcfe4Kt5KjSI5Ybw6gUgEUiHMQSWM30bC53RO/embed?start=false&loop=false&delayms=3000&quot; frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </body>
 
 </html>
