--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             11/9/23 - This is my eleventh entry. This week, my class and I learned about electrical engineering again. We did breadboarding and circuitry this week. It was confusing at first, but it got a lot more fun once my group and I got the hang of things. I hope my class and I can do more fun activities like this in the future! Sadly though, the quiz this week was cancelled. I felt pretty prepared for this, but I suppose a weekend of studying couldn't hurt! 
         </p>
         </p> <img src="Bredbord.png" width = "180px" height = "120px" >
+        </p> <img src = "Cowd.jpg" width = "180px" height = "120px" >
+                <source src = "wLights.mov" type = "video/mp4">
         
     </body>
 
