--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </p>
         
         </p> 
-            11/9/23 - This is my eleventh entry. This week, my class and I learned about electrical engineering again. We did breadboarding and circuitry this week. It was confusing at first, but it got a lot more fun once my group and I got the hang of things. I hope my class and I can do more fun activities like this in the future! Sadly though, the quiz this week was cancelled. I felt pretty prepared for this, but I suppose a weekend of studying couldn't hurt! 
+            11/9/23 - This is my eleventh entry. This week, my class and I learned about electrical engineering again. We did breadboarding and circuitry this week. We somehow got lights to flicker using an Arduino Uno, which was satisfying to watch, albeit a bit too bright for my eyes. This week was definitely a memorable once since I was able to see a side of prototyping I haven't had hands-on experience with before, compared to the week with aerospace engineering where I had a slight bit of experience making a physical model. This week was definitely a curveball, but my group and I were able to make it all work out in the end. I hope my class and I can do more fun activities like this in the future! Sadly though, the quiz this week was cancelled. I felt pretty prepared for this, but I suppose a weekend of studying couldn't hurt! 
         </p>
         </p> <img src="Bredbord.png" width = "180px" height = "120px" >
         </p> <img src = "Cowd.jpg" width = "180px" height = "120px" >
