--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
         </p> <img src="Bredbord.png" width = "180px" height = "120px" >
         </p> <img src = "Cowd.jpg" width = "180px" height = "120px" >
                 <source src = "wLights.mov" type = "video/mp4">
+                
+        <ol type="1">
+  <li> Our bridge was 14.3 + 26.4 grams. </li>
+  <li> We were able to hold 276.6 + 201 grams. </li>
+  <li> The bridge was holding 11.735 times its own weight(1:11.735 ratio).</li>
+  <li> The ends of the bridge were the heaviest by far. </li>
+  <li> We had no true inspiration for our bridge, more of working off of theories and hoping our design worked. In terms of research, 선모’s experience with Dr. Platt’s entire AP Physics 1 class, and my entry into said class helped us understand what was necessary for our bridge, and we decided to make the bridge hold as much weight as possible in the ends rather than the center to minimize torque applied, then meaning the bridge had to do a lot less work. Ethan and William found real-life equivalents, but 선모 and I didn’t think it would be practical at such a small scale. </li>
+  <li> I think because of our design deviating so much from practical bridges seen in the real world, the maximum weight capacity wasn’t as high as the group hoped it would be. </li>
+  <li> Since there wasn’t much support in the middle, the bridge failed there first, meaning the group had to use segments instead of a whole bridge. </li>
+  <li> We could’ve reinforced the middle section of the bridge, but it wouldn’t have been as optimal in my opinion. Possibly the bridge could've worked better if we had layered more of the materials together, rather than trying to spread out the noodles. </li>
+</ol>
+
+
         
     </body>
 
