--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
   <li> We could’ve reinforced the middle section of the bridge, but it wouldn’t have been as optimal in my opinion. Possibly the bridge could've worked better if we had layered more of the materials together, rather than trying to spread out the noodles. </li>
 </ol>
 
+</p> <img src = "Progress.jpg" width = "180px" height = "120px" > 
+<source src = "Worked.mov" type = "video/mp4">
+
 
         
     </body>
