--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </ol>
 
 </p> <img src = "Progress.jpg" width = "180px" height = "120px" > 
-<source src = "Worked.mov" type = "video/mp4">
+</p> <source src = "Worked.mov" type = "video/mp4">
 
 
         
