--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </ol>
 
 </p> <img src = "Progress.JPG" width = "180px" height = "120px" > 
-</p> <source src = "Worked.MOV" type = "video/mp4">
+    <source src = "Worked.MOV" type = "video/mp4">
 
 
         
