--- a/semester2.html
+++ b/semester2.html
@@ -136,6 +136,10 @@
             In terms of final notes, I would like to thank you, Mr. Poole, for being a great teacher this year, not just for computer science, but also for this class, engineering. You made a fun curricular that keeps me entertained, and your leniency makes me feel like I can relax in this class a lot more than other classes, where I feel pressure to perform at 110% all day long. You made projects fun and useful in terms of practical applications, and you've made good grades easy to achieve. Thank you so much for making junior year easier for me. I appreciate what you've done for everyone this year! 
             
         </p>
+        
+        </p> 
+            <img src = "finalWeeze.jpg" width = "180px" height = "120px">
+        </p>
 
     </body>
 
